syntax = "proto3";

package com.iscas.biz.calculation.grpc;

option java_package = "com.iscas.biz.calculation.grpc";
option java_outer_classname = "CalculationProto";
option java_multiple_files = true;


//rpc方法
service Calculation {
  //船舶参数配置
  rpc shipParam(ShipParamRequest) returns (ShipParamResponse) {}
  //浮力计算
  rpc buoyancy(BuoyancyRequest) returns (BuoyancyResponse){}
  //计算重力分布
  rpc calWeightDistribute(WeightRequest) returns (WeightResponse) {}


  //计算静水载荷
  rpc calStaticLoad(StaticLoadRequest) returns(StaticLoadResponse){}
  //波浪载荷计算
  rpc calWaveLoad(WaveLoadRequest) returns(WaveLoadResponse){}
  //计算砰击载荷
  rpc calSlamLoad(SlamLoadRequest) returns(SlamLoadResponse){}

  //剖面计算
  rpc calSection(SectionRequest) returns(SectionResponse){}
  //板件弯矩应力计算  对应总纵强度校核
  //  rpc calGirderStrength(GirderStrengthRequest)returns(GirderStrengthResponse){}

  rpc  calSigma1(Sigma1Request) returns(Sigma1Response){}
  rpc  calSigma2(Sigma2Request) returns(Sigma2Response){}
  rpc  calSigma3(Sigma3Request) returns(Sigma3Response){}
  rpc  calSigma4(Sigma4Request) returns(Sigma4Response){}
  //剪应力
  rpc  calShearingStress(ShearingStressRequest) returns(ShearingStressResponse){}

  //应力分布 对应极限弯矩校验
  rpc calDist(DistRequest)returns(DistResponse){}

  //附加压头计算
  rpc calAdditionalForceHead(AdditionalForceHeadRequest) returns(AdditionalForceHeadResponse){}

  //舱壁板材校核
  rpc calCompartmentBulkheadSheet(CompartmentBulkheadSheetRequest) returns(CompartmentBulkheadSheetResponse){}

  //扶强材计算
  rpc calSupportingMaterialStrength(SupportingMaterialStrengthRequest) returns(SupportingMaterialStrengthResponse){}
}

//浮力计算参数值
message BuoyancyRequest{
  //邦戎曲线路径
  string brojeanFilePath = 1;

  //静水力曲线文件路径
  string buoyancycurveFilePath = 2;

  //核校精度 两个double值 第一个排水量精度  第二个重心精度
  repeated double precision = 3;

  //校核目标 0-极限 1-巡航
  int32 target = 4;

  //平均吃水
  double tm = 5;

  //尾吃水
  double ta = 6;

  //船首吃水
  double tf = 7;
}

//浮力计算返回值
message BuoyancyResponse{
  //0-正常 1-异常
  int32 code = 1;

  string message = 2;

  //校核b(x)的计算结果 21个值的数组
  repeated double blist = 3;
  //每次校核计算得到的校核结果
  repeated Buoyant calrst = 4;
}
message Buoyant{
  //浮力
  double floatforce = 1;
  //浮力位置
  double floatxpos = 2;
  //船尾吃水
  double da = 3;
  //船中吃水
  double dm = 4;
  //船首吃水
  double df = 5;
  //浮力偏差 重量平衡精度
  double biasf = 6;
  //浮力位置偏差 重心平衡精度
  double biasx = 7;
  //第几次计算结果
  int32 index = 8;
}
//船舶参数请求
message ShipParamRequest {
  //水线长
  double l_wl = 1;
  //型宽
  double width = 2;
  //型深
  double  depth = 3;
  //吃水
  double draught = 4;
  //航行区域 0-无限 1-有限
  int32 area = 5;

  //校验方式 0-极限 1-巡航
  int32 checkType = 6;

  //排水量
  double displacement = 7;

  //重心纵向位置
  double portraitGravity = 8;

  //校核准则 0-通用 1-大船 2-DQ
  int32 principle = 10;

  //船舶类型 ZQJ HM
  string type = 11;
}
//船舶参数响应
message ShipParamResponse{
  //o-正常 1-异常
  int32 code = 1;
  //异常信息
  string message = 2;
}

//重量分布请求体
message WeightRequest{
  //载重文件路径
  string loadingFilePath = 1;
}

message WeightResponse{
  //0-正常 1-异常
  int32 code = 1;
  //异常信息
  string message = 2;

  //各个分项得重量分布
  repeated WeightDistribution weightDistributions = 3;

  //整体重量分布
  repeated double allDis = 4;

  //总体重量分布
  Gravity allRst = 5;

  //每个专业得重量分布
  repeated SubGravity subGravities = 6;
}

message WeightDistribution{
  //专业名-项目名
  bytes name = 1;

  //对应的重量分布
  repeated double weightItems = 2;
}

message Gravity{
  //排水量
  double displacement = 1;

  //重心纵向坐标
  double xg = 2;
}

message SubGravity{
  //专业名-项目名
  bytes name = 1;
  //排水量
  double displacement = 2;

  //重心纵向坐标
  double xg = 3;
}

//静水载荷计算
message StaticLoadRequest{

}
//静水载荷返回结果
message StaticLoadResponse{
  //未修正的静水剪力 目前返回21个
  repeated double nvec = 1;
  //  未修正的弯矩 目前返回21个
  repeated double mvec = 2;

  //修正的静水剪力 目前返回21个
  repeated double nvecM = 3;
  //  修正的弯矩 目前返回21个
  repeated double mvecM = 4;
}

//波浪载荷计算请求体
message WaveLoadRequest{
  //波高(m)
  double height = 1;
}
//波浪载荷返回体
message WaveLoadResponse{
  //中拱附加浮力  21个
  repeated double mbb = 1;

  //波峰未修正的静水剪力 目前返回21个
  repeated double nwvecH = 2;
  // 波峰未修正的弯矩 目前返回21个
  repeated double mwvecH = 3;

  //波峰修正的静水剪力 目前返回21个
  repeated double nwvecMH = 4;
  //波峰修正的弯矩 目前返回21个
  repeated double mwvecMH = 5;

  //中垂附加浮力  21个
  repeated double bdeltaS = 6;

  //波谷未修正的静水剪力 目前返回21个
  repeated double nwvecS = 7;
  // 波谷未修正的弯矩 目前返回21个
  repeated double mwvecS = 8;

  //波谷修正的静水剪力 目前返回21个
  repeated double nwvecMS = 9;
  //波谷修正的弯矩 目前返回21个
  repeated double mwvecMS = 10;
}
//砰击载荷 请求体
message SlamLoadRequest{
  //航速
  double speed = 1;
}

//砰击载荷 返回体
message SlamLoadResponse{
  //波峰抨击弯矩  数组  21个
  repeated double pwbm = 1;

  //波谷抨击弯矩  数组  21个
  repeated double nwb = 2;
}
//剖面计算输入
message SectionRequest{
  //剖面文件路径
  string profileFilePath = 1;

  //肋位号
  double ribNumber = 2;
}
//剖面计算输出
message SectionResponse{
  //初始静矩
  double firstMoment0 = 1;

  //惯性矩
  double interia0 = 2;

  //中拱时的中和轴
  double zaxisH = 3;

  //中拱时静矩
  double firstMomH = 4;

  //中拱时惯性矩
  double interiaH = 5;

  //中垂时的中和轴
  double zaxisS = 6;

  //中垂时静矩
  double firstMomS = 7;

  //中垂时惯性矩
  double interiaS = 8;
}


//应力分布请求体 目前没有参数
message DistRequest{

}

//应力分布输出
message DistResponse{
  //中拱极限弯矩
  double extremeH = 1;
  //中垂极限弯矩
  double extremeS = 2;
}
message Sigma1Request{

  //构件跨距-龙骨跨距 每个的跨距
  repeated double kuaChang = 1;

  //剖面位置x-衡量间距
  double girderDistance = 2;

  //纵骨间距
  double  frDistance = 3;

  //纵骨规格 每个的规格
  repeated double frGuige = 4;

  //板各厚度 每个板材的厚度
  repeated double plateThick = 5;

  //设备重量(t)
  double deviceWeight = 6;

  //版格宽度
  double girderWidth = 7;

  //材料类型
  string materialType = 8;

  /**
     * 中拱-波浪弯矩
     */
  double midArchWaveMoment = 9;
  /**
   * 中拱-砰击振动弯矩
   */
  double midArchImpactMoment = 10;
  /**
   * 中拱-剪力
   */
  double midArchShear = 11;
  /**
   * 中垂-波浪弯矩
   */
  double midVerticalWaveMoment = 12;
  /**
   * 中垂-砰击振动弯矩
   */
  double midVerticalImpactMoment = 13;
  /**
   * 中垂-剪力
   */
  double midVerticalShear = 14;

  //龙骨数量
  int32 numGirder = 15;
}

message Sigma1Response{
  repeated Sigma1Entity sigma1 = 1;
}

message Sigma1Entity{
  //中拱龙骨上纤维
  double sigma1HUp = 1;
  //中拱龙骨下纤维
  double sigma1Down = 2;
  //中垂龙骨上纤维
  double sigma1SUp = 3;
  //中垂龙骨上纤维
  double sigma1SDown = 4;
}

message Sigma2Request{

}

message Sigma2Response{
  repeated Sigma2Entity sigma2 = 1;
}

message Sigma2Entity{
  //中拱支座上纤维
  double zhonggongZhizuoShang = 1;
  //中拱支座下纤维
  double zhonggongZhizuoXia = 2;

  //中拱跨中上纤维
  double zhonggongKuazhongShang = 3;
  //中拱跨中下纤维
  double zhonggongKuazhongXia = 4;

  //中垂支座上纤维
  double zhongchuiZhizuoShang = 5;
  //中垂支座下纤维
  double zhongchuiZhizuoXia = 6;

  //中垂跨中上纤维
  double zhongchuiKuazhongShang = 7;
  //中垂跨中下纤维
  double zhongchuiKuazhongXia = 8;
}

message Sigma3Request{

}

message Sigma3Response{
  repeated Sigma2Entity sigma3 = 1;
}

message Sigma4Request{

}

message Sigma4Response{
  repeated Sigma4Entity sigma4 = 1;
}

message Sigma4Entity{
  //中拱支座
  double zhonggongZhizuo = 1;

  //中拱跨中
  double zhonggongKuazhong = 2;

  //中垂支座
  double zhongchuiZhizuo = 3;

  //中垂跨中
  double zhongchuiKuazhong = 4;
}

message ShearingStressRequest{

}
message ShearingStressResponse{
  repeated ShearingStressEntity shearingStress = 1;
}
message ShearingStressEntity{
  //中垂剖面最大剪力值τ
  double zhongchuiMax = 1;
  //中拱剖面最大剪力值τ
  double zhonggongMax = 2;
  //许用剪应力[τ]
  double shearingStress = 3;
}

message AdditionalForceHeadRequest{
  //干舷高
  double freeboard = 1;

  //肋位号
  double leiweihao = 2;

  //舱壁位置
  double cangbiWeizhi = 3;

  //是否防撞舱壁
  bool isCollision = 4;

  //水动压力
  double shuidongYali = 5;
}
message AdditionalForceHeadResponse{
  //肋位号  数组
  repeated double leiweihao = 1;

  //附加压头  数组
  repeated double addyatouh = 2;
}

message CompartmentBulkheadSheetRequest{
  //液仓空气管压头
  double airguanyatou = 1;

  //甲板层高 区间excel中的数据
  repeated double deckHeight = 2;

  //是否液压舱壁  区间excel中的数据
  repeated bool boolLiquidTank = 3;

  //板宽 区间excel中的数据
  repeated double banWidth = 4;

  //板厚 区间excel中的数据
  repeated double banThick = 5;

  //舱壁板材料
  repeated double cangbiBancailiao = 6;
}

message CompartmentBulkheadSheetResponse{
  //破损压头水压值
  repeated double yatou = 1;

  //均布载荷
  repeated double disload = 2;
  //lgv
  repeated double lgvList = 3;

  //u输出
  repeated double uList = 4;
  //chi1 输出
  repeated double chi1List = 5;
  //chi2 输出
  repeated double chi2List = 6;
  //悬链应力
  repeated double stressXlList = 7;
  //跨中应力
  repeated double stressKuozhong = 8;
  //支座应力
  repeated double stressZhizuo = 9;
  //许用剪力
  repeated double shearAllow = 10;
}

message SupportingMaterialStrengthRequest{
  //扶强材型号
  repeated string guicaiType = 1;

  //带板宽
  repeated double daibanKuan = 2;
  //带板厚
  repeated double daibanHou = 3;
  //甲板纵骨跨距
  double zongguKuaju = 4;
}

message SupportingMaterialStrengthResponse{
  //上端载荷
  repeated double upperLoad = 1;

  //下端载荷
  repeated double lowerLoad = 2;

  //自由支持中部弯矩
  repeated double ziyouZhongwan = 3;

  //自由支持上部弯矩
  repeated double ziyouShangwan = 4;
  //自由支持下部弯矩
  repeated double ziyouXiawan = 5;
  //自由支持上部剪力
  repeated double ziyouShangjian = 6;
  //自由支持下部剪力
  repeated double ziyouXiajian = 7;

  //刚性固定上部弯矩
  repeated double gangxingShangwan = 8;
  //刚性固定下部弯矩
  repeated double gangxingXiawan = 9;
  //刚性固定上部剪力
  repeated double gangxingShangjian = 10;
  //刚性固定下部剪力
  repeated double gangxingXiajian = 11;

  //应力值中部应力
  repeated double yingliZhongying = 12;
  //应力值上部应力
  repeated double yingliShangying = 13;
  //应力值下部应力
  repeated double yingliXiaying = 14;
  //应力值许用应力
  repeated double yingliXuying = 15;
  //应力值上部剪力
  repeated double yingliShangjian = 16;
  //应力值下部剪力
  repeated double yingliXiajian = 17;
  //应力值许用剪力
  repeated double yingliXujian = 18;
}